--- a/14.jest28/package.json
+++ b/14.jest28/package.json
@@ -5,12 +5,18 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "jest",
+    "test": "jest --verbose",
     "lint": "eslint src --max-warnings=0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/react-hooks": "^8.0.1",
+    "cross-fetch": "^3.1.5",
+    "node-fetch": "^3.2.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -19,6 +25,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -34,6 +41,7 @@
     "eslint-plugin-tailwindcss": "^3.6.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
+    "msw": "^0.43.1",
     "postcss": "^8.4.14",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.5",
